# rogue-engine

./: .gitignore  CMakeLists.txt  Makefile  README.md  differential_light.txt  roguelight  roguelike
.cache/clangd/index/: ai.cpp.BFA8FD4D4AF7F66C.idx  ai.hpp.577FA3E6DBC4F9A3.idx  animation.cpp.17C2FF4937A0752E.idx  animation.hpp.C31E1EFB0E6A1F45.idx  colors.cpp.31F32AF96009F62B.idx  colors.hpp.0FAC619781B317D5.idx  creature.cpp.03FDD27930853035.idx  creature.hpp.ED0A92B37B2F9CBE.idx  draw_ui.cpp.08CF6097EBE406C5.idx  draw_ui.hpp.E3A37D35D75F45CC.idx  entity.cpp.9619A3AAD91597D4.idx  entity.hpp.FBF565120C4DA9FD.idx  fighter.cpp.676F1707A62E14DF.idx  fighter.hpp.7531AF29514B01AD.idx  fov.cpp.A75D10B97F132EAF.idx  fov.hpp.0CAD764B0159EF67.idx  game.cpp.FFF1B2DC4A56D25F.idx  game.hpp.F47AE1B99C9EEA11.idx  game_window.cpp.E0853D9D4117FDA4.idx  game_window.hpp.75BA5319ED7CE896.idx  glow.cpp.1EE927FAFE9FA8EE.idx  glow.hpp.AFDEBE0FA2CCEC1A.idx  input_manager.cpp.6A52409E10AA1D31.idx  input_manager.hpp.6FC10253B43E9FB8.idx  inventory_window.cpp.E0E8DF2DD4AC19EF.idx  inventory_window.hpp.68F63025A34782D3.idx  item.cpp.9835E0E218FCE4B3.idx  item.hpp.0E39E3B714E63106.idx  levelgen.cpp.29E800AC6C208C22.idx  levelgen.hpp.3DE62C35E12A9AE1.idx  main.cpp.664FF0DA6A5DDF54.idx  main.hpp.342051CDFDED7046.idx  map.cpp.C5BA02660BE30063.idx  map.hpp.00C4F846E345D3BC.idx  menu_window.cpp.55B85DF663B05659.idx  menu_window.hpp.516FEADCD9ADE80E.idx  monster_factory.cpp.6837FCC7F7587E32.idx  monster_factory.hpp.B71CD5A8AB671B08.idx  particle.cpp.84F1CF64355A1D49.idx  (+13 more)
dep/: colors.d  event_manager.d  game.d  game_object.d  global.d  globals.d  main.d  map.d  tile_manager.d
dep/algorithms/: fov.d  perlin.d
dep/animations/: animation.d
dep/draw/: tile_manager.d
dep/entities/: ai.d  creature.d  entity.d  glow.d  monster_factory.d  object.d  tile.d  tile_factory.d
src/: colors.cpp  colors.hpp  event_manager.cpp  event_manager.hpp  game.cpp  game.hpp  log.cpp  log.hpp  main.cpp  main.hpp  map.cpp  map.hpp
src/actions/: action.cpp  action.hpp
src/algorithms/: fov.cpp  fov.hpp  path.cpp  path.hpp  perlin.cpp  perlin.hpp
src/animations/: animation.cpp  animation.hpp
src/draw/: draw_ui.cpp  draw_ui.hpp  text.cpp  text.hpp  tile_manager.cpp  tile_manager.hpp
src/entities/: ai.cpp  ai.hpp  creature.cpp  creature.hpp  entity.cpp  entity.hpp  fighter.cpp  fighter.hpp  glow.cpp  glow.hpp  item.cpp  item.hpp  monster_factory.cpp  monster_factory.hpp  object.cpp  object.hpp  player.cpp  player.hpp  tile.cpp  tile.hpp  tile_factory.cpp  tile_factory.hpp
src/factories/: item_factory.cpp  item_factory.hpp  monster_factory.cpp  monster_factory.hpp  tile_factory.cpp  tile_factory.hpp
src/inputManager/: character_sheet.cpp  character_sheet.hpp  equipment_window.cpp  equipment_window.hpp  equipped_item_window.cpp  equipped_item_window.hpp  game_window.cpp  game_window.hpp  input_manager.cpp  input_manager.hpp  inventory_window.cpp  inventory_window.hpp  item_window.cpp  item_window.hpp  look.cpp  look.hpp  menu_window.cpp  menu_window.hpp  pickup_inventory_window.cpp  pickup_inventory_window.hpp
src/particles/: effect.cpp  effect.hpp  particle.cpp  particle.hpp  particle_emitter.cpp  particle_emitter.hpp
src/procgen/: dice.cpp  dice.hpp  levelgen.cpp  levelgen.hpp
